# pythia

./: .gitignore  Cargo.toml  Dockerfile  README.md  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  rust.yml  rustfmt.yml
kustomize/: deployment.yaml  service.yaml
src/: agenda.rs  arglexer.rs  help.rs  lib.rs  main.rs  minutes.rs  poll.rs  resource.rs
