[package]
name = "pythia"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.10.8"
chrono = "0.4.19"
log = "0.4.14"
serde_json = "1.0.64"
serde = "1.0.126"

[dependencies.tokio]
version = "1.8.0"
features = ["macros", "rt-multi-thread"]

[dependencies.fern]
version = "0.6.0"
features = ["colored"]
