[package]
name = "pythia"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.10.9"
chrono = "0.4.19"
serde_json = "1.0.73"
serde = "1.0.132"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }

[dependencies.tokio]
version = "1.15.0"
features = ["macros", "rt-multi-thread"]
